--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,5 +18,5 @@ jobs:
       - name: Push to dokku
         uses: dokku/github-action@master
         with:
-          git_remote_url: 'ssh://dokku@139.162.223.170:22/graphql'
+          git_remote_url: 'ssh://dokku@139.162.223.170:22/order-book'
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
